<resources>
  <string name="app_name">TallyBook</string>
  <string name="edit_one">记一笔</string>
  <string name="month_out">本月支出</string>
  <string name="month_in">本月收入</string>
  <string name="budget">预算剩余</string>
  <string name="look_table">查看图标分析</string>
  <string name="add_remark">添加备注</string>
  <string name="no_remark">取消</string>
  <string name="set_budget">设置预算</string>
  <string name="data_emp">数据为空，无此类记录</string>
  <string name="about">关于</string>
  <string name="setting">设置</string>
  <string name="account_info">详情</string>
  <string name="history">账单记录</string>
  <string name="history_month">本月账单记录</string>
  <string name="delete_all">删除全部记录</string>
  <string name="chart_title">账单详情</string>
  <string name="out">支出</string>
  <string name="in">收入</string>
  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="no_data">暂无数据</string>

</resources>