<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:background="@color/background"
  android:orientation="vertical"
  android:padding="20dp">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <Button
      android:id="@+id/dialog_more_btn_about"
      android:layout_width="0dp"
      android:layout_height="100dp"
      android:layout_margin="5dp"
      android:layout_weight="1"
      android:background="@color/white"
      android:drawableTop="@mipmap/it_guanyu"
      android:gravity="center"
      android:padding="20dp"
      android:text="@string/about" />

    <Button
      android:id="@+id/dialog_more_btn_setting"
      android:layout_width="0dp"
      android:layout_height="100dp"
      android:layout_margin="5dp"
      android:layout_weight="1"
      android:background="@color/white"
      android:drawableTop="@mipmap/it_shezhi"
      android:gravity="center"
      android:padding="20dp"
      android:text="@string/setting" />

    <Button
      android:id="@+id/dialog_more_btn_history"
      android:layout_width="0dp"
      android:layout_height="100dp"
      android:layout_margin="5dp"
      android:layout_weight="1"
      android:background="@color/white"
      android:drawableTop="@mipmap/it_jilu"
      android:gravity="center"
      android:padding="20dp"
      android:text="@string/history" />
  </LinearLayout>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:weightSum="3">

    <Button
      android:id="@+id/dialog_more_btn_info"
      android:layout_width="0dp"
      android:layout_height="100dp"
      android:layout_margin="5dp"
      android:layout_weight="0.95"
      android:background="@color/white"
      android:drawableTop="@mipmap/it_xiqing"
      android:gravity="center"
      android:padding="20dp"
      android:text="账单详情" />
  </LinearLayout>

  <ImageView
    android:id="@+id/dialog_more_iv_close"
    android:layout_gravity="center"
    android:src="@mipmap/ih_error"
    android:layout_marginTop="10dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"/>
</LinearLayout>